# video-processor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/skills/review-tests/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/workflows/: ci.yml
docs/architecture/: 01-introduction-goals.md  03-context-scope.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  index.md
input/: .gitkeep
output/: .gitkeep
processing/: .gitkeep
src/video_processor/: __init__.py  audio_extractor.py  cli.py  content_generator.py  pipeline.py  settings.py  thumbnail_processor.py  transcriber.py  video_editor.py
src/video_processor/prompts/: en_system.md  en_user.md  nl_system.md  nl_user.md
tests/: conftest.py  test_audio_extractor.py  test_cli.py  test_content_generator.py  test_thumbnail_processor.py  test_transcriber.py  test_video_editor.py
tests/data/: tip-willem-copilot-skills.mov
thumbnails/: .gitkeep
